After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684769 - Going back to a search searches in wrong directory
Going back to a search searches in wrong directory
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Navigation
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-25 09:39 UTC by Volker Sobek (weld)
Modified: 2012-09-27 01:12 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Volker Sobek (weld) 2012-09-25 09:39:36 UTC
Inside a directory A do:
1. Start a search for a folder B
2. Open folder B from the search results
3. Press the the back button to get back to the search

Result: It seems that the search is now performed inside directory B, even though it still shows folder A near the search field.
Comment 1 Cosimo Cecchi 2012-09-27 01:12:42 UTC
Thanks for the report, I pushed a fix for this now.