search-directory: only set base model when it matches query location

Otherwise we'll return results from the wrong base directory for
searches that are saved, or from the back/forward history.

https://bugzilla.gnome.org/show_bug.cgi?id=684769