libnautilus-private/nautilus-search-directory.c
@@ -846,6 +846,26 @@ nautilus_search_directory_set_base_model (NautilusSearchDirectory *search,
 		return;
 	}
 
+	if (search->details->query != NULL) {
+		gchar *uri;
+		GFile *query_location, *model_location;
+		gboolean is_equal;
+
+		uri = nautilus_query_get_location (search->details->query);
+		query_location = g_file_new_for_uri (uri);
+		model_location = nautilus_directory_get_location (base_model);
+
+		is_equal = g_file_equal (model_location, query_location);
+
+		g_object_unref (model_location);
+		g_object_unref (query_location);
+		g_free (uri);
+
+		if (!is_equal) {
+			return;
+		}
+	}
+
 	clear_base_model (search);
 	search->details->base_model = nautilus_directory_ref (base_model);
 
